1：创建订单接口 需要做如下几件事 1：调用good rpc 查req中 goodid (单商品)的商品详情。good 端 的rpc get good by id  的实现 直接调用该rpc对应的http gin接口的service 层代码。这两个逻辑直接复用 2：订单id的生成按照雪花算法在pod 中生产，机器id 取1。但是要留好id 接入rd的入口，写好注释 3：请求参数不用鉴权，因为gate way已经做完了这件事 4：创建完成后订单表插入一条待支付的订单记录 5：创建后往mq中写入消息队列，这里是定时消息 三分钟后mq 回调订单payTime 的service 层 支付订单接口逻辑如下: 1:请求入参里有支付状态成功 失败 超时 2:成功则 订单状态更新为支付成功，并且插入物流表一条记录，物流状态为呼叫骑手中 3：失败，不做具体操作 4：超时：调用超时接口service层逻辑 订单超时： 1：订单状态改为取消。 订单退款: 1:查订单状态，只有订单支付成功才有这个逻辑 2：查物流状态(rpc )，插入一条物流记录，状态改成取消物流成功 3：查物流状态(rpc )步骤需要先生产rpc 接口：更新物流byorderid rpc 接口 4：这个接口虽然是个更新接口但是更新逻辑为插入新纪录，覆盖原记录
